--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turing-iview",
+  "name": "tg-turing-iview",
   "version": "1.0.0",
   "main": "dist/tg-turing-iview.min.js",
   "packageName": "tg-turing-iview",
