依赖文件调整

--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "tg-turing-iview",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "main": "dist/tg-turing-iview.min.js",
   "packageName": "tg-turing-iview",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "axios": "^0.18.0",
-    "babel-loader": "^8.0.0-beta",
     "bh-iview": "^1.2.2",
     "tg-turing": "^1.8.4",
     "uuid": "^3.2.1",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue": "^2.5.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "babel-loader": "^8.0.0-beta",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -25,6 +23,7 @@
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
+    "vue-router": "^3.0.1",
     "vue-loader": "^15.0.9",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
