--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tg-turing-iview",
+  "name": "tg-turing-antd",
   "version": "1.3.6",
-  "main": "dist/tg-turing-iview.min.js",
-  "packageName": "tg-turing-iview",
+  "main": "dist/tg-turing-antd.min.js",
+  "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
     "bh-iview": "^1.3.0",
