--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
+    "@riophae/vue-treeselect": "^0.0.29",
     "bh-iview": "^1.3.0",
     "tg-turing": "^1.8.4",
     "uuid": "^3.2.1",
