--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.4.11",
+  "version": "1.4.13",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
     "@riophae/vue-treeselect": "^0.0.29",
     "bh-iview": "^1.3.0",
-    "tg-turing": "^1.8.17",
+    "tg-turing": "^1.8.19",
     "uuid": "^3.2.1",
     "vue": "^2.5.16"
   },
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.config.js --mode development",
-    "build": "webpack --config webpack.prod.config.js --mode production"
+    "build": "webpack --config webpack.prod.config.js --mode production",
+    "local": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../turing-example/node_modules/tg-turing-antd/dist/"
   }
 }
