--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.4.13",
+  "version": "1.4.16",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
     "@riophae/vue-treeselect": "^0.0.29",
+    "tg-turing": "^1.8.22",
+    "uuid": "^3.2.1"
+  },
+  "peerDependencies": {
     "bh-iview": "^1.3.0",
     "tg-turing": "^1.8.19",
-    "uuid": "^3.2.1",
     "vue": "^2.5.16"
   },
   "devDependencies": {
@@ -34,6 +37,6 @@
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.config.js --mode development",
     "build": "webpack --config webpack.prod.config.js --mode production",
-    "local": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../turing-example/node_modules/tg-turing-antd/dist/"
+    "local": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../../GitLab/funauthapp/node_modules/tg-turing-antd/dist/"
   }
 }
