--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.6.3",
+  "version": "1.7.0",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
     "@riophae/vue-treeselect": "^0.0.29",
-    "tg-turing": "^1.10.1",
+    "bh-iview": "^1.3.0",
+    "tg-turing": "^1.11.0",
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
