--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.7.4",
+  "version": "1.7.6",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
-    "@riophae/vue-treeselect": "^0.0.29",
-    "bh-iview": "^1.3.0",
-    "tg-turing": "^1.11.2",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "vuex": "^3.0.1"
   },
   "peerDependencies": {
     "bh-iview": "^1.3.0",
-    "tg-turing": "^1.8.19",
+    "tg-turing": "^1.11.4",
     "vue": "^2.5.16"
   },
   "devDependencies": {
