--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
-    "uuid": "^3.2.1",
-    "vuex": "^3.0.1"
+    "bh-iview": "^1.3.0",
+    "tg-turing": "^1.11.6",
+    "vue": "^2.5.16"
   },
   "peerDependencies": {
     "bh-iview": "^1.3.0",
-    "tg-turing": "^1.11.4",
+    "tg-turing": "^1.11.6",
     "vue": "^2.5.16"
   },
   "devDependencies": {
