--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.8.15",
+  "version": "1.8.19",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
     "bh-iview": "^1.3.0",
-    "tg-turing": "^1.11.17",
+    "tg-turing": "^1.12.3",
     "vue": "^2.5.16"
   },
   "peerDependencies": {
@@ -43,6 +43,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.config.js --mode development",
     "build": "webpack --config webpack.prod.config.js --mode production",
-    "local": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../../GitLab/egg/project-v/node_modules/tg-turing-antd/dist/"
+    "local": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../turing-example/node_modules/tg-turing-antd/dist/",
+    "local2": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../../GitLab/egg/project-v/node_modules/tg-turing-antd/dist/"
   }
 }
