--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.12.1",
+  "version": "1.12.6",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
     "bh-iview": "^1.3.1",
-    "tg-turing": "^1.15.2",
+    "tg-turing": "^1.15.3",
     "vue": "^2.5.16"
   },
   "peerDependencies": {
@@ -31,6 +31,8 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "rollup-plugin-css-only": "^0.4.0",
+    "rollup-plugin-vue": "^4.3.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vue-loader": "^15.0.9",
@@ -44,6 +46,7 @@
     "dev": "webpack-dev-server --config webpack.dev.config.js --mode development",
     "build": "webpack --config webpack.prod.config.js --mode production",
     "local": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../turing-example/node_modules/tg-turing-antd/dist/",
-    "local2": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../../GitLab/egg/project-v/node_modules/tg-turing-antd/dist/"
+    "local2": "webpack --config webpack.prod.config.js --mode production && cp -r ./dist/* ../../GitLab/egg/project-v/node_modules/tg-turing-antd/dist/",
+    "esm": "rollup --config ./rollup.config.js"
   }
 }
