--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.15.4",
+  "version": "1.15.5",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
-    "bh-iview": "^2.0.1",
-    "tg-turing": "^1.19.4",
-    "vue": "^2.5.17"
+    "bh-iview": "^2.0.5",
+    "tg-turing": "^1.20.1",
+    "vue": "^2.5.17",
+    "vue-upload-component": "^2.8.11"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
