--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tg-turing-antd",
-  "version": "1.15.7",
+  "version": "1.16.4",
   "main": "dist/tg-turing-antd.min.js",
   "packageName": "tg-turing-antd",
   "license": "MIT",
   "dependencies": {
     "bh-iview": "^2.0.5",
-    "tg-turing": "^1.20.2",
+    "fin-hypergrid": "^3.0.2",
+    "tg-turing": "^1.21.1",
     "vue": "^2.5.17",
     "vue-upload-component": "^2.8.11"
   },
